#5 - added alembic migrations; fixed project structure and settings

--- a/movies_project/.env.example
+++ b/movies_project/.env.example
@@ -1,5 +1,3 @@
-POSTGRES_DB=name
-POSTGRES_USER=user
-POSTGRES_PASSWORD=pass
-POSTGRES_OPTIONS=-c search_path=content
-DEBUG=True
+DB_NAME=movies_database
+DB_USER=app
+DB_PASSWORD=123qwe
