--- a/movies_project/docker-compose.yml
+++ b/movies_project/docker-compose.yml
@@ -1,40 +1,23 @@
 version: '3'
-services:
 
+services:
   postgres:
-    image: postgres:13.3
+    image: postgres:latest
     restart: on-failure
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-      - ./dump-movies.dump:/dump-movies.dump
-      - ./restore.sh:/docker-entrypoint-initdb.d/restore.sh
     expose:
       - "5432"
-    environment: &postgres_env
-      POSTGRES_HOST: postgres
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_OPTIONS: ${POSTGRES_OPTIONS}
-
-  elasticsearch:
-    image: elasticsearch:8.10.2
-    expose:
-      - "9200"
-    volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
     environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - ES_JAVA_OPTS=-Xms2g -Xmx2g
-    healthcheck:
-      test: ["CMD-SHELL", "curl --silent --fail localhost:9200/_cluster/health?wait_for_status=green&timeout=50s || exit 1"]
-      interval: 10s
-      timeout: 60s
-      retries: 3
+      POSTGRES_HOST: postgres
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    networks:
+      - backend
 
   redis:
-    image: redis:7.2.0
+    image: redis:latest
     restart: on-failure
     expose:
       - "6379"
@@ -45,48 +28,38 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    networks:
+      - backend
 
-    
-  etl:
-    build: etl
-    restart: on-failure
-    volumes:
-      - ./etl/data:/usr/src/app/data
-    environment:
-      <<: *postgres_env
-      DEBUG: ${DEBUG}
-      ELASTICSEARCH_HOST: http://elasticsearch:9200
-      ELASTICSEARCH_SCHEMAS_DIR: ${ELASTICSEARCH_SCHEMAS_DIR}
-      JSON_STATE_PATH: ${JSON_STATE_PATH}
-      LIMIT: ${LIMIT}
-    depends_on:
-      - postgres
-      - elasticsearch
-
-  async_api:
-    build: async_api
+  auth_service:
+    build: ./auth_service/src/
     restart: on-failure
     expose:
       - "8000"
-    environment:
-      ELASTIC_HOST: http://elasticsearch
-      REDIS_HOST: redis
+    env_file:
+      - .env
     depends_on:
-      - elasticsearch
+      - postgres
       - redis
+    networks:
+      - backend
 
   nginx:
-    image: nginx:1.25.1
+    image: nginx:latest
     restart: on-failure
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
     depends_on:
-      - async_api
+      - auth_service
     ports:
       - "80:80"
+    networks:
+      - backend
 
 volumes:
   postgres_data:
-  elasticsearch_data:
   redis_data:
+
+networks:
+  backend:
