--- a/movies_project/nginx/nginx.conf
+++ b/movies_project/nginx/nginx.conf
@@ -7,7 +7,6 @@ events {
 
 
 http {
-    server_tokens off;
     include       mime.types;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -34,6 +33,8 @@ http {
     proxy_set_header   Host             $host;
     proxy_set_header   X-Real-IP        $remote_addr;
     proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+
+    real_ip_header    X-Forwarded-For;
 
     include conf.d/*.conf;
 }
