--- a/movies_project/auth_service/src/.env.example
+++ b/movies_project/auth_service/src/.env.example
@@ -18,3 +18,6 @@ SECRET_KEY_ACCESS=key
 SECRET_KEY_REFRESH=key
 ACCESS_TOKEN_EXPIRE_TIME=15
 REFRESH_TOKEN_EXPIRE_TIME=10080
+
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=Password123
