--- a/movies_project/auth_service/src/Dockerfile
+++ b/movies_project/auth_service/src/Dockerfile
@@ -1,16 +1,16 @@
-FROM python:3.10-alpine
+FROM python:3.10
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
-COPY entrypoint.sh entrypoint.sh
-COPY . ./src
-
+COPY requirements.txt requirements.txt
 
 RUN pip install --upgrade pip \
-    && pip install -r /app/src/requirements.txt
+    && pip install -r /app/requirements.txt
+
+COPY . ./src
 
 CMD ["/bin/sh", "-c", "pwd; cd src ; alembic upgrade head ; \
  python3 create_admin.py; \
