--- a/movies_project/auth_service/src/requirements.txt
+++ b/movies_project/auth_service/src/requirements.txt
@@ -2,19 +2,21 @@ elasticsearch[async]==8.9.0
 fastapi==0.101.0
 flake8==6.1.0
 orjson==3.9.4
-pydantic[email]==2.1.1
+pydantic[email]==2.4.0
 python-dotenv==1.0.0
 redis==4.6.0
 uvicorn==0.23.2
 uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython"
 gunicorn==21.2.0
 pydantic-settings==2.0.2
+typer[all]==0.9.0
+python-multipart==0.0.6
 
-python-jose==3.3.0
+python-jose[cryptography]==3.3.0
 
 psycopg2-binary==2.9.7
 asyncpg==0.28.0
-SQLAlchemy[asyncpg]==1.4.49
+SQLAlchemy[asyncpg]==2.0.16
 alembic==1.12.0
 
 pytest==7.4.0
@@ -27,3 +29,6 @@ fastapi-cache2[redis] == 0.2.1
 asyncio == 3.4.3
 fastapi-pagination==0.12.10
 Werkzeug==3.0.0
+httptools==0.5.0
+passlib[bcrypt]==1.7.4
+
