create tests base

--- a/movies_project/auth_service/src/.env.example
+++ b/movies_project/auth_service/src/.env.example
@@ -2,12 +2,12 @@ APP_NAME=Movies Authentication
 APP_HOST=auth_service
 APP_PORT=8000
 
-DB_NAME=movies_database
-DB_USER=app
-DB_PASSWORD=password
-DB_HOST=postgres
-DB_PORT=5432
-DB_ECHO_ENGINE=False
+POSTGRES_DB=movies_database
+POSTGRES_USER=app
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_ECHO_ENGINE=False
 
 REDIS_HOST=redis
 REDIS_PORT=6379
