--- a/movies_project/auth_service/src/Dockerfile
+++ b/movies_project/auth_service/src/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 
 RUN pip install --upgrade pip \
-    && pip install -r /app/requirements.txt
+    && pip install -r /app/requirements.txt --no-cache-dir
 
 COPY . ./src
 
